syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "proto/blog_recommendations";

service BlogRecommendationService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc GetAll(GetAllRequest) returns (GetAllResponse) {}
  rpc GetById(GetByIdRequest) returns (GetByIdResponse) {}
  rpc GetByReceiverId(GetByReceiverIdRequest) returns (GetByReceiverIdResponse) {}
}

message BlogRecommendation {
  int32 ID = 1;
  int32 BlogId = 2;
  int32 RecommenderId = 3;
  int32 RecommendationReceiverId = 4;
  RecommenderBlog blog = 5;
}

message RecommenderBlog {
  int32 ID = 1;
  string Title = 2;
  string Description = 3;
  enum BlogStatus {
    Draft = 0;
    Published = 1;
    Closed = 2;
    Active = 3;
    Famous = 4;
  }
  BlogStatus Status = 4;
  int32 AuthorId = 5;
  repeated RecommenderComment Comments = 6;
  repeated RecommenderVote Votes = 7;
  repeated BlogRecommendation Recommendations = 8;
}

message RecommenderComment {
  int32 ID = 1;
  int32 AuthorId = 2;
  int32 BlogId = 3;
  string Text = 4;
  google.protobuf.Timestamp CreatedAt = 5;
  google.protobuf.Timestamp UpdatedAt = 6;
}

message RecommenderVote {
  int32 ID = 1;
  int32 UserId = 2;
  int32 BlogId = 3;
  enum VoteType {
    Downvote = 0;
    Upvote = 1;
  }
  VoteType Type = 4;
}

message CreateRequest {
  BlogRecommendation recommendation = 1;    // Proveriti samo ne znam sta su slali tacno
}

message CreateResponse {
}

message GetByIdRequest {
  string ID = 1;
}

message GetByIdResponse {
  BlogRecommendation recommendation = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated BlogRecommendation recommendations = 1;
}

message GetByReceiverIdRequest {
  int32 ReceiverId = 1;
}

message GetByReceiverIdResponse {
  repeated BlogRecommendation recommendations = 1;
}
