syntax = "proto3";

option go_package = "proto/votes";

service VotesService {
  rpc GetVoteById(GetVoteByIdRequest) returns (GetVoteByIdResponse) {}
  rpc GetAllVotes(GetAllVotesRequest) returns (GetAllVotesResponse) {}
}

message Vote {
  int32 ID = 1;
  int32 UserId = 2;
  int32 BlogId = 3;
  enum VoteType {
    Downvote = 0;
    Upvote = 1;
  }
  VoteType Type = 4;
}

message GetVoteByIdRequest {
  string ID = 1;
}

message GetVoteByIdResponse {
  Vote vote = 1;
}

message GetAllVotesRequest {
}

message GetAllVotesResponse {
  repeated Vote votes = 1;
}